# shopify-Product-Collection-Upload-Download

./: .gitignore  BUILD-MAC.command  BUILD-WINDOWS.cmd  BUILD_INSTALLERS.md  README-FIX.txt  README.md  README.txt  RELEASE-NOTES-v2.0.0.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  REPLACE_FILE.txt  REPLACE_FILES.txt  REPLACE_THESE_FILES.txt  REQUIRED-SHOPIFY-SCOPES.md  TOKEN_STORAGE_FIX.md  apply-ci-fix.ps1  build-macos.sh  build-windows.ps1  index.html  package-lock.json  package.json
.github/workflows/: build-desktop.yml  build-installers.yml
src/: App.css  App.tsx  main.tsx  readability.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: appSettings.ts  desktopApi.ts  fileSave.ts  metafieldMapping.ts  shopifyClient.ts
src/lib/admin-tools/: adminTools.ts  blog-transfer.ts  customer-transfer.ts  discount-manager.ts  inventory-manager.ts  mediaTools.ts  order-transfer.ts  price-manager.ts  saveRows.ts
src/pages/: BackupPage.tsx  BlogTransferPage.tsx  CollectionExportPage.tsx  CollectionImportPage.tsx  ColumnMappingStep.css  ColumnMappingStep.tsx  CustomerTransferPage.tsx  DiagnosticsPage.tsx  DiscountManagerPage.tsx  HistoryPage.tsx  InventoryManagerPage.tsx  OrderTransferPage.tsx  PriceManagerPage.tsx  ProductExportPage.tsx  ProductImagesPage.tsx  ProductImportPage.css  ProductImportPage.tsx  ProductValidationStep.css  ProductValidationStep.tsx  SettingsPage.tsx  StoreMediaPage.tsx  StoresPage.tsx  TemplatesPage.tsx  common.css
(+13 files in other folders)
