[package]
name = "shopify-product-collection-upload"
version = "2.0.0"
description = "Multi-store Shopify product and collection desktop manager"
authors = ["Hausone GmbH"]
edition = "2021"

[lib]
name = "shopify_product_collection_upload_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
rfd = "0.15"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
